fix using old id for partitions in http (#107)
* fix using old id for partitions in http

* change method names and addresses to reflect that they use timestamps
