# src/api/http.rs
@@ -30,7 +30,7 @@ pub(crate) struct VDiskPartitions {
     vdisk_id: u32,
     node_name: String,
     disk_name: String,
-    partitions: Vec<u64>,
+    partitions: Vec<String>,
 }
 
 #[derive(Debug, Serialize, Clone)]
@@ -167,7 +167,7 @@ fn partitions(bob: State<BobServer>, vdisk_id: u32) -> Result<Json<VDiskPartitio
     let pearls = runtime().block_on(holders.read());
     debug!("get pearl holders: OK");
     let pearls: &[_] = pearls.as_ref();
-    let partitions = pearls.iter().map(Holder::start_timestamp).collect();
+    let partitions = pearls.iter().map(Holder::get_id).collect();
     let ps = VDiskPartitions {
         node_name: group.node_name().to_owned(),
         disk_name: group.disk_name().to_owned(),
@@ -182,7 +182,7 @@ fn partitions(bob: State<BobServer>, vdisk_id: u32) -> Result<Json<VDiskPartitio
 fn partition_by_id(
     bob: State<'_, BobServer>,
     vdisk_id: u32,
-    partition_id: u64,
+    partition_id: String,
 ) -> Result<Json<Partition>, StatusExt> {
     let group = find_group(&bob, vdisk_id)?;
     debug!("group with provided vdisk_id found");
@@ -194,7 +194,7 @@ fn partition_by_id(
     let pearls = rt.block_on(holders.read());
     let pearl = pearls
         .iter()
-        .find(|pearl| pearl.start_timestamp() == partition_id);
+        .find(|pearl| pearl.get_id() == partition_id);
     let partition = pearl.map(|p| Partition {
         node_name: group.node_name().to_owned(),
         disk_name: group.disk_name().to_owned(),
@@ -212,11 +212,11 @@ fn partition_by_id(
     })
 }
 
-#[post("/vdisks/<vdisk_id>/partitions/<partition_id>/<action>")]
+#[post("/vdisks/<vdisk_id>/partitions/by_timestamp/<timestamp>/<action>")]
 fn change_partition_state(
     bob: State<BobServer>,
     vdisk_id: u32,
-    partition_id: u64,
+    timestamp: u64,
     action: Action,
 ) -> Result<StatusExt, StatusExt> {
     let group = find_group(&bob, vdisk_id)?;
@@ -225,13 +225,13 @@ fn change_partition_state(
     debug!("HOT FIX: run web server on same runtime as bob");
     let mut rt = Runtime::new().expect("create runtime");
     let res = format!(
-        "partition with id: {} in vdisk {} is successfully {:?}ed",
-        partition_id, vdisk_id, action
+        "partitions with timestamp {} on vdisk {} is successfully {:?}ed",
+        timestamp, vdisk_id, action
     );
     let task = async move {
         match action {
-            Action::Attach => group.attach(partition_id).await,
-            Action::Detach => group.detach(partition_id).await.map(|_| ()),
+            Action::Attach => group.attach(timestamp).await,
+            Action::Detach => group.detach(timestamp).await.map(|_| ()),
         }
     };
     match rt.block_on(task) {
@@ -263,25 +263,25 @@ fn remount_vdisks_group(bob: State<BobServer>, vdisk_id: u32) -> Result<StatusEx
     }
 }
 
-#[delete("/vdisks/<vdisk_id>/partitions/<partition_id>")]
+#[delete("/vdisks/<vdisk_id>/partitions/by_timestamp/<timestamp>")]
 fn delete_partition(
     bob: State<BobServer>,
     vdisk_id: u32,
-    partition_id: u64,
+    timestamp: u64,
 ) -> Result<StatusExt, StatusExt> {
     let group = find_group(&bob, vdisk_id)?;
-    let pearls = futures::executor::block_on(group.detach(partition_id));
+    let pearls = futures::executor::block_on(group.detach(timestamp));
     if let Ok(holders) = pearls {
         let mut result = String::new();
         for holder in holders {
             if let Err(e) = holder.drop_directory() {
                 let msg = format!(
-                    "partition delete failed {} on vdisk {}, error: {}",
-                    partition_id, vdisk_id, e
+                    "partitions with timestamp {} delete failed on vdisk {}, error: {}",
+                    timestamp, vdisk_id, e
                 );
                 result.push_str(&msg);
             } else {
-                result.push_str(&format!("successfully deleted partition {}", partition_id));
+                result.push_str(&format!("successfully deleted partitions with timestamp {}", timestamp));
             }
             result.push('\n');
         }
@@ -295,8 +295,8 @@ fn delete_partition(
             Status::BadRequest,
             true,
             format!(
-                "partition {} not found on vdisk {} or it is active",
-                partition_id, vdisk_id
+                "partitions with timestamp {} not found on vdisk {} or it is active",
+                timestamp, vdisk_id
             ),
         ))
     }
